# GGTest

./: CMakeLists.txt  OperationLib.cpp  OperationLib.hpp  main.cpp  testRunner.cpp
